--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
@@ -8,7 +9,12 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
     }
+}
+plugins {
+    // ...
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 allprojects {
@@ -17,6 +23,7 @@ allprojects {
         mavenCentral()
     }
 }
+
 
 rootProject.buildDir = '../build'
 subprojects {
@@ -29,3 +36,4 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
