--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   image_picker: ^1.0.0
   image_cropper: ^4.0.1
   file_picker: ^5.0.0
+  flutter_map:
+  google_maps_flutter:
+  flutter_google_places:
+  awesome_snackbar_content:
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
