--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   http:
   flutter_styled_toast:
   fluttertoast: ^8.2.2
+  image:
+  shared_preferences: 2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
