--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   fluttertoast: ^8.2.2
   image:
   shared_preferences: 2.2.2
+  intl:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
